--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -2,9 +2,9 @@ name: Test & Docs
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, wip ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, wip ]
 
 jobs:
   build:
